tercera pre entrega. Se agrego SASS, meta, vars y mixin

--- a/paginas/maquillaje.html
+++ b/paginas/maquillaje.html
@@ -8,7 +8,7 @@
     <title>Beauty store</title>
     <link rel="shortcut icon" href="../img/logo-beso.png" type="image/x-icon">
     <!--Link a mi CSS-->
-    <link rel="stylesheet" href="../css/maquillaje.css">
+    <link rel="stylesheet" href="../css/main.css">
     <!--Link CSS BS-->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha2/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-aFq/bzH65dt+w6FI2ooMVUpc+21e0SRygnTpmBvdBgSdnuTN7QbdgL+OapgHtvPp" crossorigin="anonymous">
@@ -60,7 +60,7 @@
         </section>
 
         <!--Inicia nav-->
-        <nav class="navbar navbar-expand-lg bg-body-tertiary">
+        <nav class="navbar navbar-expand-lg bg-body-tertiary" id="nav-body">
 
             <div class="container-fluid" id="cont-fluid">
                 <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
@@ -127,7 +127,7 @@
 
     <main>
 
-
+        <div class="flex-row">
         <!--Side menu vertical-->
         <article class="menu-vertical">
             <nav class="side-bar">
@@ -162,29 +162,29 @@
 
 
         <!--Grid productos-->
-        <section class="contenedor-grid">
-            <article class="grid grid-template-columns-rows">
+        <section class="contenedor-grid-producto">
+            <article class="grid-producto column-row-producto">
 
-                <div class="grids">
-                    <div class="slide-content">
-                        <div class="card">
-                            <div class="image-content">
+                <div class="grids-producto">
+                    <div class="slide-content-producto">
+                        <div class="card-producto">
+                            <div class="image-content-producto">
 
-                                <div class="card-image">
+                                <div class="card-image-producto">
                                     <img id="mac-iluminador" src="../img/pag-maqullaje/mac-iluminador.png"
                                         alt="rubor liquido MAC">
                                 </div>
                             </div>
 
-                            <div class="card-content">
-                                <h2 class="nombre-marca">MAC</h2>
-                                <h3 class="nombre-producto">EXTRA DIMENSION SKINFINISH</h3>
+                            <div class="card-content-producto">
+                                <h2 class="nombre-marca-producto">MAC</h2>
+                                <h3 class="nombre-producto-producto">EXTRA DIMENSION SKINFINISH</h3>
                             </div>
                             <hr class="separador">
 
                             <article class="texto-descripcion">
-                                <div class="precio-producto">
-                                    <h2 class="precio">$8.500</h2>
+                                <div class="precio-producto-producto">
+                                    <h2 class="precio-producto">$8.500</h2>
                                     <h3 class="cantidad-cuotas">3 cuotas de $2.833</h3>
                                 </div>
 
@@ -194,25 +194,25 @@
                     </div>
                 </div>
 
-                <div class="grids">
-                    <div class="slide-content">
-                        <div class="card">
-                            <div class="image-content">
+                <div class="grids-producto">
+                    <div class="slide-content-producto">
+                        <div class="card-producto">
+                            <div class="image-content-producto">
 
-                                <div class="card-image">
+                                <div class="card-image-producto">
                                     <img id="mac-mascara" src="../img/pag-maqullaje/mac-mascara.png"
                                         alt="mascara de pestañas MAC">
                                 </div>
 
-                                <div class="card-content">
-                                    <h2 class="nombre-marca">MAC</h2>
-                                    <h3 class="nombre-producto">M·A·CSTACK MASCARA</h3>
+                                <div class="card-content-producto">
+                                    <h2 class="nombre-marca-producto">MAC</h2>
+                                    <h3 class="nombre-producto-producto">M·A·CSTACK MASCARA</h3>
                                 </div>
                                 <hr class="separador">
 
                                 <article class="texto-descripcion">
-                                    <div class="precio-producto">
-                                        <h2 class="precio">$5.800</h2>
+                                    <div class="precio-producto-producto">
+                                        <h2 class="precio-producto">$5.800</h2>
                                         <h3 class="cantidad-cuotas">3 cuotas de $1.933</h3>
                                     </div>
 
@@ -223,24 +223,24 @@
                     </div>
                 </div>
 
-                <div class="grids">
-                    <div class="slide-content">
-                        <div class="card">
-                            <div class="image-content">
-                                <div class="card-image">
+                <div class="grids-producto">
+                    <div class="slide-content-producto">
+                        <div class="card-producto">
+                            <div class="image-content-producto">
+                                <div class="card-image-producto">
                                     <img id="mac-labial" src="../img/pag-maqullaje/mac-labial.png" alt="labial MAC">
                                 </div>
                             </div>
 
-                            <div class="card-content">
-                                <h2 class="nombre-marca">MAC</h2>
-                                <h3 class="nombre-producto">RETRO MATTE LIPSTICK</h3>
+                            <div class="card-content-producto">
+                                <h2 class="nombre-marca-producto">MAC</h2>
+                                <h3 class="nombre-producto-producto">RETRO MATTE LIPSTICK</h3>
                             </div>
                             <hr class="separador">
 
                             <article class="texto-descripcion">
-                                <div class="precio-producto">
-                                    <h2 class="precio">$4.563</h2>
+                                <div class="precio-producto-producto">
+                                    <h2 class="precio-producto">$4.563</h2>
                                     <h3 class="cantidad-cuotas">3 cuotas de $1.521</h3>
                                 </div>
 
@@ -252,25 +252,25 @@
                 </div>
 
                 <!--segunda fila-->
-                <div class="grids">
-                    <div class="slide-content">
-                        <div class="card">
-                            <div class="image-content">
-                                <div class="card-image">
+                <div class="grids-producto">
+                    <div class="slide-content-producto">
+                        <div class="card-producto">
+                            <div class="image-content-producto">
+                                <div class="card-image-producto">
                                     <img id="mac-mascara-2" src="../img/pag-maqullaje/mac-mascara-2.png"
                                         alt="mascara de pestaña MAC">
                                 </div>
                             </div>
 
-                            <div class="card-content">
-                                <h2 class="nombre-marca">MAC</h2>
-                                <h3 class="nombre-producto">MAGIC EXTENSION 5MM <br> FIBRE MASCARA</h3>
+                            <div class="card-content-producto">
+                                <h2 class="nombre-marca-producto">MAC</h2>
+                                <h3 class="nombre-producto-producto">MAGIC EXTENSION 5MM <br> FIBRE MASCARA</h3>
                             </div>
                             <hr class="separador">
 
                             <article class="texto-descripcion">
-                                <div class="precio-producto">
-                                    <h2 class="precio">$5.600</h2>
+                                <div class="precio-producto-producto">
+                                    <h2 class="precio-producto">$5.600</h2>
                                     <h3 class="cantidad-cuotas">3 cuotas de $1.866</h3>
                                 </div>
 
@@ -280,25 +280,25 @@
                     </div>
                 </div>
 
-                <div class="grids">
-                    <div class="slide-content">
-                        <div class="card">
-                            <div class="image-content">
-                                <div class="card-image">
+                <div class="grids-producto">
+                    <div class="slide-content-producto">
+                        <div class="card-producto">
+                            <div class="image-content-producto">
+                                <div class="card-image-producto">
                                     <img id="mac-labial-2" src="../img/pag-maqullaje/mac-labial-2.png"
                                         alt="Labial en barra MAC">
                                 </div>
                             </div>
 
-                            <div class="card-content">
-                                <h2 class="nombre-marca">MAC</h2>
-                                <h3 class="nombre-producto">LOVE ME LIPSTICK</h3>
+                            <div class="card-content-producto">
+                                <h2 class="nombre-marca-producto">MAC</h2>
+                                <h3 class="nombre-producto-producto">LOVE ME LIPSTICK</h3>
                             </div>
                             <hr class="separador">
 
                             <article class="texto-descripcion">
-                                <div class="precio-producto">
-                                    <h2 class="precio">$3.630</h2>
+                                <div class="precio-producto-producto">
+                                    <h2 class="precio-producto">$3.630</h2>
                                     <h3 class="cantidad-cuotas">3 cuotas de $1.210</h3>
                                 </div>
 
@@ -309,25 +309,25 @@
                     </div>
                 </div>
 
-                <div class="grids">
-                    <div class="slide-content">
-                        <div class="card">
-                            <div class="image-content">
-                                <div class="card-image">
+                <div class="grids-producto">
+                    <div class="slide-content-producto">
+                        <div class="card-producto">
+                            <div class="image-content-producto">
+                                <div class="card-image-producto">
                                     <img id="mac-corrector" src="../img/pag-maqullaje/mac-corrector.png"
                                         alt="Corrector liquido MAC">
                                 </div>
                             </div>
 
-                            <div class="card-content">
-                                <h2 class="nombre-marca">MAC</h2>
-                                <h3 class="nombre-producto">PRO LONGWEAR CONCEALER</h3>
+                            <div class="card-content-producto">
+                                <h2 class="nombre-marca-producto">MAC</h2>
+                                <h3 class="nombre-producto-producto">PRO LONGWEAR CONCEALER</h3>
                             </div>
                             <hr class="separador">
 
                             <article class="texto-descripcion">
-                                <div class="precio-producto">
-                                    <h2 class="precio">$6.500</h2>
+                                <div class="precio-producto-producto">
+                                    <h2 class="precio-producto">$6.500</h2>
                                     <h3 class="cantidad-cuotas">3 cuotas de $2.166</h3>
                                 </div>
 
@@ -340,25 +340,25 @@
 
 
                 <!--Tercera fila-->
-                <div class="grids">
-                    <div class="slide-content">
-                        <div class="card">
-                            <div class="image-content">
-                                <div class="card-image">
+                <div class="grids-producto">
+                    <div class="slide-content-producto">
+                        <div class="card-producto">
+                            <div class="image-content-producto">
+                                <div class="card-image-producto">
                                     <img id="mac-polvo" src="../img/pag-maqullaje/mac-polvo.png"
                                         alt="Polvo compacto MAC">
                                 </div>
                             </div>
 
-                            <div class="card-content">
-                                <h2 class="nombre-marca">MAC</h2>
-                                <h3 class="nombre-producto">STUDIO FIX POWDER <br> PLUS FOUNDATION</h3>
+                            <div class="card-content-producto">
+                                <h2 class="nombre-marca-producto">MAC</h2>
+                                <h3 class="nombre-producto-producto">STUDIO FIX POWDER <br> PLUS FOUNDATION</h3>
                             </div>
                             <hr class="separador">
 
                             <article class="texto-descripcion">
-                                <div class="precio-producto">
-                                    <h2 class="precio">$8.296</h2>
+                                <div class="precio-producto-producto">
+                                    <h2 class="precio-producto">$8.296</h2>
                                     <h3 class="cantidad-cuotas">3 cuotas de $2.765</h3>
                                 </div>
 
@@ -368,25 +368,25 @@
                     </div>
                 </div>
 
-                <div class="grids">
-                    <div class="slide-content">
-                        <div class="card">
-                            <div class="image-content">
-                                <div class="card-image">
+                <div class="grids-producto">
+                    <div class="slide-content-producto">
+                        <div class="card-producto">
+                            <div class="image-content-producto">
+                                <div class="card-image-producto">
                                     <img id="mac-rubor" src="../img/pag-maqullaje/mac-rubor.png"
                                         alt="Rubor en polvo MAC">
                                 </div>
                             </div>
 
-                            <div class="card-content">
-                                <h2 class="nombre-marca">MAC</h2>
-                                <h3 class="nombre-producto">MINERALIZE BLUSH</h3>
+                            <div class="card-content-producto">
+                                <h2 class="nombre-marca-producto">MAC</h2>
+                                <h3 class="nombre-producto-producto">MINERALIZE BLUSH</h3>
                             </div>
                             <hr class="separador">
 
                             <article class="texto-descripcion">
-                                <div class="precio-producto">
-                                    <h2 class="precio">$6.844</h2>
+                                <div class="precio-producto-producto">
+                                    <h2 class="precio-producto">$6.844</h2>
                                     <h3 class="cantidad-cuotas">3 cuotas de $2.281</h3>
                                 </div>
 
@@ -396,25 +396,25 @@
                     </div>
                 </div>
 
-                <div class="grids">
-                    <div class="slide-content">
-                        <div class="card">
-                            <div class="image-content">
-                                <div class="card-image">
-                                    <img id="mascara-maybelline" src="../img/pag-maqullaje/mascara-maybelline.png"
+                <div class="grids-producto">
+                    <div class="slide-content-producto">
+                        <div class="card-producto">
+                            <div class="image-content-producto">
+                                <div class="card-image-producto">
+                                    <img id="mascara-maybelline-waterproof" src="../img/pag-maqullaje/mascara-maybelline.png"
                                         alt="Mascara de pestañas Total Temptation waterproof Maybelline">
                                 </div>
                             </div>
 
-                            <div class="card-content">
-                                <h2 class="precio">$4.500</h2>
-                                <h3 class="cantidad-cuotas">3 cuotas de $1.500</h3>
+                            <div class="card-content-producto">
+                                <h2 class="nombre-marca-producto">MAYBELLINE</h2>
+                                <h3 class="nombre-producto-producto">TOTAL TEMPTATION MASCARA WATERPROOF</h3>
                             </div>
                             <hr class="separador">
 
                             <article class="texto-descripcion">
-                                <div class="precio-producto">
-                                    <h2 class="precio">$1.874</h2>
+                                <div class="precio-producto-producto">
+                                    <h2 class="precio-producto">$4.780</h2>
                                     <h3 class="cantidad-cuotas"></h3>
                                 </div>
 
@@ -425,6 +425,7 @@
                 </div>
             </article>
         </section>
+    </div>
     </main>
 
     <!--Pagination-->
