--- a/index.html
+++ b/index.html
@@ -5,10 +5,13 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width,initial-scale=1" />
+    <meta name="description" content="Maquillaje y productos de cuidado importado y nacional, conseguilo todo en tu tienda online de confianza.  "/>
+    <meta name="robots" content= "index, follow">
+    <meta name="keywords" content="Maquillaje, Cuidado, Belleza"/>
     <title>Beauty store</title>
     <link rel="shortcut icon" href="img/logo-beso.png" type="image/x-icon">
     <!--Link a mi CSS-->
-    <link rel="stylesheet" href="css/style.css">
+    <link rel="stylesheet" href="css/main.css">
     <!--Link CSS BS-->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha2/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-aFq/bzH65dt+w6FI2ooMVUpc+21e0SRygnTpmBvdBgSdnuTN7QbdgL+OapgHtvPp" crossorigin="anonymous">
@@ -18,7 +21,7 @@
     <!--Inicia divider-->
     <header>
         <section class="contenedor-envio">
-            <div class="header-envio">Envio gratis a CABA desde $10.000</div>
+            <div class="header-envio" id="head-color">Envio gratis a CABA desde $10.000</div>
         </section>
         <!--termina divider-->
 
@@ -26,7 +29,7 @@
         <section class="header">
             <div class="cont-header">
                 <div class="logo-img">
-                    <img src="img/logo-beso.png" alt="" id="brand">
+                    <img src="img/logo-beso.png" alt="logo de la pagina, beso y nombre." id="brand">
                 </div>
 
                 <div id="search-bar">
@@ -43,15 +46,15 @@
                     <div class="contenedor-icon">
 
                         <div class="cont-icon">
-                            <img class="img-logos" src="img/logo-corazon.png">
+                            <img class="img-logos" src="img/logo-corazon.png" alt="icono de corazon">
                         </div>
 
                         <div class="cont-icon">
-                            <img class="img-logos" src="img/logo-carrito.png">
+                            <img class="img-logos" src="img/logo-carrito.png" alt="icono de carro de compras">
                         </div>
 
                         <div class="cont-icon">
-                            <img class="img-logos" src="img/logo-user (1).png">
+                            <img class="img-logos" src="img/logo-user (1).png" alt="icono de usuario">
                         </div>
 
                     </div>
@@ -123,13 +126,13 @@
         <div id="carouselExampleControlsNoTouching" class="carousel slide" data-bs-touch="false">
             <div class="carousel-inner">
                 <div class="carousel-item active">
-                    <img src="img/juno-1.jpg" class="d-block w-100" alt="...">
+                    <img src="img/juno-1.jpg" class="d-block w-100" alt="imagen con nombre de marca y balsamos labiales">
                 </div>
                 <div class="carousel-item">
-                    <img src="img/juno-2.jpg" class="d-block w-100" alt="...">
+                    <img src="img/juno-2.jpg" class="d-block w-100" alt="imagen con un texto acerca de nuestra tienda">
                 </div>
                 <div class="carousel-item">
-                    <img src="img/juno-3.jpg" class="d-block w-100" alt="...">
+                    <img src="img/juno-3.jpg" class="d-block w-100" alt="imagen con datos de la tienda">
                 </div>
             </div>
             <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleControlsNoTouching"
@@ -151,13 +154,13 @@
             <article class="flex">
                 <div class="grid-1 grid-template-columns-rows-1">
                     <div class="img-cuotas">
-                        <img class="cuotas" src="img/cuotas-png.png" alt="#">
+                        <img class="cuotas" src="img/cuotas-png.png" alt="icono de recibo de tarjeta">
                     </div>
                     <div class="img-envio">
-                        <img src="img/envio-png.png" alt="#" class="envio">
+                        <img src="img/envio-png.png" alt="#" class="icono de envios">
                     </div>
                     <div class="img-metodos">
-                        <img src="img/metodos-png.png" alt="#" class="metodos">
+                        <img src="img/metodos-png.png" alt="#" class="icono de tarjetas">
                     </div>
                 </div>
 
@@ -209,7 +212,7 @@
 
                                 <div class="card-image">
                                     <img class="foto-producto" src="img/pag-maqullaje/polvo-givenchy.png"
-                                        alt="Set de polvos compactos Givenchy" class="card-img">
+                                        alt="Set de polvos compactos Givenchy" >
                                 </div>
                             </div>
 
@@ -237,8 +240,7 @@
                         <div class="card">
                             <div class="image-content">
                                 <div class="card-image">
-                                    <img class="foto-producto" src="img/pag-maqullaje/sombras-dior.png" alt="labial MAC"
-                                        class="card-img">
+                                    <img class="foto-producto" src="img/pag-maqullaje/sombras-dior.png" alt="paleta de sombras DIOR">
                                 </div>
                             </div>
 
@@ -280,7 +282,7 @@
 
                                 <div class="card-image">
                                     <img class="foto-producto" src="img/pag-maqullaje/base-clinique.png"
-                                        alt="Base liquida Clinique" class="card-img">
+                                        alt="Base liquida Clinique">
                                 </div>
                             </div>
 
@@ -310,7 +312,7 @@
 
                                 <div class="card-image">
                                     <img class="foto-producto" src="img/pag-maqullaje/mascara-too-faced.png"
-                                        alt="Mascara de pestañas a prueba de agua Too Faced" class="card-img">
+                                        alt="Mascara de pestañas a prueba de agua Too Faced">
                                 </div>
                             </div>
 
@@ -339,7 +341,7 @@
                             <div class="image-content">
                                 <div class="card-image">
                                     <img class="foto-producto" src="img/pag-maqullaje/polvo-too-faced.png"
-                                        alt="labial MAC" class="card-img">
+                                        alt="polvos sueltos TOO FACED">
                                 </div>
                             </div>
 
@@ -372,13 +374,13 @@
                 <div class="container">
                     <div class="row">
                         <div class="col">
-                            <img class="img-info" src="img/card-1.png" alt="#">
+                            <img class="img-info" src="img/card-1.png" alt="imagen con pasos de skin care">
                         </div>
                         <div class="col">
-                            <img class="img-info" src="img/card-3.png" alt="#">
+                            <img class="img-info" src="img/card-3.png" alt="imagen con productos de skin care">
                         </div>
                         <div class="col">
-                            <img class="img-info" src="img/card-2.png" alt="#">
+                            <img class="img-info" src="img/card-2.png" alt="imagen con basicos de skin care">
                         </div>
                     </div>
                 </div>
