--- a/paginas/labios.html
+++ b/paginas/labios.html
@@ -8,7 +8,7 @@
     <title>Beauty store</title>
     <link rel="shortcut icon" href="../img/logo-beso.png" type="image/x-icon">
     <!--Link a mi CSS-->
-    <link rel="stylesheet" href="../css/labios.css">
+    <link rel="stylesheet" href="../css/main.css">
     <!--Link CSS BS-->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha2/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-aFq/bzH65dt+w6FI2ooMVUpc+21e0SRygnTpmBvdBgSdnuTN7QbdgL+OapgHtvPp" crossorigin="anonymous">
@@ -61,7 +61,7 @@
         </section>
 
         <!--Inicia nav-->
-        <nav class="navbar navbar-expand-lg bg-body-tertiary">
+        <nav class="navbar navbar-expand-lg bg-body-tertiary" id="nav-body">
 
             <div class="container-fluid" id="cont-fluid">
                 <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
@@ -120,14 +120,15 @@
         <!--Header contenido de pagina-->
         <section class="div-header">
             <article>
-                <div class="cortes">LABIOS</div>
+                <div class="cortes-pagina">LABIOS</div>
                 <div class="lineas"></div>
             </article>
         </section>
     </header>
 
     <main>
-        <!--Side menu vertical-->
+        <div class="flex-row">
+             <!--Side menu vertical-->
         <article class="menu-vertical">
             <nav class="side-bar">
                 <ul class="list-side-bar">
@@ -161,29 +162,29 @@
 
 
         <!--Grid productos-->
-        <section class="contenedor-grid">
-            <article class="grid grid-template-columns-rows">
+        <section class="contenedor-grid-producto">
+            <article class="grid-producto column-row-producto">
 
-                <div class="grids">
-                    <div class="slide-content">
-                        <div class="card">
-                            <div class="image-content">
+                <div class="grids-producto">
+                    <div class="slide-content-producto">
+                        <div class="card-producto">
+                            <div class="image-content-producto">
 
-                                <div class="card-image">
+                                <div class="card-image-producto">
                                     <img id="labial-nyx" src="../img/pag-maqullaje/nyx-labial-2.png"
                                         alt="Labial liquido NYX">
                                 </div>
                             </div>
 
-                            <div class="card-content">
-                                <h2 class="nombre-marca">NYX</h2>
-                                <h3 class="nombre-producto">SMOOTH WHIP MATTE LIP CREAM</h3>
+                            <div class="card-content-producto">
+                                <h2 class="nombre-marca-producto">NYX</h2>
+                                <h3 class="nombre-producto-producto">SMOOTH WHIP MATTE LIP CREAM</h3>
                             </div>
                             <hr class="separador">
 
                             <article class="texto-descripcion">
-                                <div class="precio-producto">
-                                    <h2 class="precio">$2.005</h2>
+                                <div class="precio-producto-producto">
+                                    <h2 class="precio-producto">$2.005</h2>
                                     <h3 class="cantidad-cuotas"></h3>
                                 </div>
 
@@ -193,25 +194,25 @@
                     </div>
                 </div>
 
-                <div class="grids">
-                    <div class="slide-content">
-                        <div class="card">
-                            <div class="image-content">
+                <div class="grids-producto">
+                    <div class="slide-content-producto">
+                        <div class="card-producto">
+                            <div class="image-content-producto">
 
-                                <div class="card-image">
+                                <div class="card-image-producto">
                                     <img id="labial-nyx-2" src="../img/pag-maqullaje/nyx-labial.png"
                                         alt="Labial liquido NYX">
                                 </div>
 
-                                <div class="card-content">
-                                    <h2 class="nombre-marca">NYX</h2>
-                                    <h3 class="nombre-producto">LABIAL LÍQUIDO MATE LIP LINGERIE XXL</h3>
+                                <div class="card-content-producto">
+                                    <h2 class="nombre-marca-producto">NYX</h2>
+                                    <h3 class="nombre-producto-producto">LABIAL LÍQUIDO MATE LIP LINGERIE XXL</h3>
                                 </div>
                                 <hr class="separador">
 
                                 <article class="texto-descripcion">
-                                    <div class="precio-producto">
-                                        <h2 class="precio">$2.353</h2>
+                                    <div class="precio-producto-producto">
+                                        <h2 class="precio-producto">$2.353</h2>
                                         <h3 class="cantidad-cuotas"></h3>
                                     </div>
 
@@ -222,24 +223,24 @@
                     </div>
                 </div>
 
-                <div class="grids">
-                    <div class="slide-content">
-                        <div class="card">
-                            <div class="image-content">
-                                <div class="card-image">
+                <div class="grids-producto">
+                    <div class="slide-content-producto">
+                        <div class="card-producto">
+                            <div class="image-content-producto">
+                                <div class="card-image-producto">
                                     <img id="labial-mac" src="../img/pag-maqullaje/mac-labial.png" alt="labial MAC">
                                 </div>
                             </div>
 
-                            <div class="card-content">
-                                <h2 class="nombre-marca">MAC</h2>
-                                <h3 class="nombre-producto">RETRO MATTE LIPSTICK</h3>
+                            <div class="card-content-producto">
+                                <h2 class="nombre-marca-producto">MAC</h2>
+                                <h3 class="nombre-producto-producto">RETRO MATTE LIPSTICK</h3>
                             </div>
                             <hr class="separador">
 
                             <article class="texto-descripcion">
-                                <div class="precio-producto">
-                                    <h2 class="precio">$4.563</h2>
+                                <div class="precio-producto-producto">
+                                    <h2 class="precio-producto">$4.563</h2>
                                     <h3 class="cantidad-cuotas"></h3>
                                 </div>
 
@@ -251,25 +252,25 @@
                 </div>
 
                 <!--segunda fila-->
-                <div class="grids">
-                    <div class="slide-content">
-                        <div class="card">
-                            <div class="image-content">
-                                <div class="card-image">
+                <div class="grids-producto">
+                    <div class="slide-content-producto">
+                        <div class="card-producto">
+                            <div class="image-content-producto">
+                                <div class="card-image-producto">
                                     <img id="gloss-maybelline" src="../img/pag-maqullaje/maybelline-gloss.png"
                                         alt="Lip gloss Maybelline">
                                 </div>
                             </div>
 
-                            <div class="card-content">
-                                <h2 class="nombre-marca">MAYBELLINE</h2>
-                                <h3 class="nombre-producto">BRILLO LABIAL LIFTER <br> GLOSS LARGA DURACIÓN</h3>
+                            <div class="card-content-producto">
+                                <h2 class="nombre-marca-producto">MAYBELLINE</h2>
+                                <h3 class="nombre-producto-producto">BRILLO LABIAL LIFTER <br> GLOSS LARGA DURACIÓN</h3>
                             </div>
                             <hr class="separador">
 
                             <article class="texto-descripcion">
-                                <div class="precio-producto">
-                                    <h2 class="precio">$3.500</h2>
+                                <div class="precio-producto-producto">
+                                    <h2 class="precio-producto">$3.500</h2>
                                     <h3 class="cantidad-cuotas"></h3>
                                 </div>
 
@@ -279,24 +280,24 @@
                     </div>
                 </div>
 
-                <div class="grids">
-                    <div class="slide-content">
-                        <div class="card">
-                            <div class="image-content">
-                                <div class="card-image">
+                <div class="grids-producto">
+                    <div class="slide-content-producto">
+                        <div class="card-producto">
+                            <div class="image-content-producto">
+                                <div class="card-image-producto">
                                     <img id="lipglass" src="../img/pag-maqullaje/mac-labial-3.png" alt="Gloss MAC">
                                 </div>
                             </div>
 
-                            <div class="card-content">
-                                <h2 class="nombre-marca">MAC</h2>
-                                <h3 class="nombre-producto">LIPGLASS</h3>
+                            <div class="card-content-producto">
+                                <h2 class="nombre-marca-producto">MAC</h2>
+                                <h3 class="nombre-producto-producto">LIPGLASS</h3>
                             </div>
                             <hr class="separador">
 
                             <article class="texto-descripcion">
-                                <div class="precio-producto">
-                                    <h2 class="precio">$4.480</h2>
+                                <div class="precio-producto-producto">
+                                    <h2 class="precio-producto">$4.480</h2>
                                     <h3 class="cantidad-cuotas"></h3>
                                 </div>
 
@@ -307,25 +308,25 @@
                     </div>
                 </div>
 
-                <div class="grids">
-                    <div class="slide-content">
-                        <div class="card">
-                            <div class="image-content">
-                                <div class="card-image">
+                <div class="grids-producto">
+                    <div class="slide-content-producto">
+                        <div class="card-producto">
+                            <div class="image-content-producto">
+                                <div class="card-image-producto">
                                     <img id="labial-mac-2" src="../img/pag-maqullaje/mac-labial-4.png"
                                         alt="Labial liquido MAC">
                                 </div>
                             </div>
 
-                            <div class="card-content">
-                                <h2 class="nombre-marca">MAC</h2>
-                                <h3 class="nombre-producto">POWDER KISS LIQUID LIPCOLOUR</h3>
+                            <div class="card-content-producto">
+                                <h2 class="nombre-marca-producto">MAC</h2>
+                                <h3 class="nombre-producto-producto">POWDER KISS LIQUID LIPCOLOUR</h3>
                             </div>
                             <hr class="separador">
 
                             <article class="texto-descripcion">
-                                <div class="precio-producto">
-                                    <h2 class="precio">$5.600</h2>
+                                <div class="precio-producto-producto">
+                                    <h2 class="precio-producto">$5.600</h2>
                                     <h3 class="cantidad-cuotas"></h3>
                                 </div>
 
@@ -338,25 +339,25 @@
 
 
                 <!--Tercera fila-->
-                <div class="grids">
-                    <div class="slide-content">
-                        <div class="card">
-                            <div class="image-content">
-                                <div class="card-image">
+                <div class="grids-producto">
+                    <div class="slide-content-producto">
+                        <div class="card-producto">
+                            <div class="image-content-producto">
+                                <div class="card-image-producto">
                                     <img id="labial-mac" src="../img/pag-maqullaje/mac-labial-5.png"
                                         alt="Labial en barra MAC">
                                 </div>
                             </div>
 
-                            <div class="card-content">
-                                <h2 class="nombre-marca">MAC</h2>
-                                <h3 class="nombre-producto">POWDER KISS VELVET <br> BLUR SLIM STICK</h3>
+                            <div class="card-content-producto">
+                                <h2 class="nombre-marca-producto">MAC</h2>
+                                <h3 class="nombre-producto-producto">POWDER KISS VELVET <br> BLUR SLIM STICK</h3>
                             </div>
                             <hr class="separador">
 
                             <article class="texto-descripcion">
-                                <div class="precio-producto">
-                                    <h2 class="precio">$5.600</h2>
+                                <div class="precio-producto-producto">
+                                    <h2 class="precio-producto">$5.600</h2>
                                     <h3 class="cantidad-cuotas"></h3>
                                 </div>
 
@@ -366,25 +367,25 @@
                     </div>
                 </div>
 
-                <div class="grids">
-                    <div class="slide-content">
-                        <div class="card">
-                            <div class="image-content">
-                                <div class="card-image">
+                <div class="grids-producto">
+                    <div class="slide-content-producto">
+                        <div class="card-producto">
+                            <div class="image-content-producto">
+                                <div class="card-image-producto">
                                     <img id="labial-lancome" src="../img/pag-maqullaje/labial-lancome.png"
                                         alt="Labial liquido LANCOME">
                                 </div>
                             </div>
 
-                            <div class="card-content">
-                                <h2 class="nombre-marca">LANCOME</h2>
-                                <h3 class="nombre-producto">L'ABSOLU ROUGE DRAMA INK</h3>
+                            <div class="card-content-producto">
+                                <h2 class="nombre-marca-producto">LANCOME</h2>
+                                <h3 class="nombre-producto-producto">L'ABSOLU ROUGE DRAMA INK</h3>
                             </div>
                             <hr class="separador">
 
                             <article class="texto-descripcion">
-                                <div class="precio-producto">
-                                    <h2 class="precio">$12.490</h2>
+                                <div class="precio-producto-producto">
+                                    <h2 class="precio-producto">$12.490</h2>
                                     <h3 class="cantidad-cuotas">3 cuotas de $4.163</h3>
                                 </div>
 
@@ -394,25 +395,25 @@
                     </div>
                 </div>
 
-                <div class="grids">
-                    <div class="slide-content">
-                        <div class="card">
-                            <div class="image-content">
-                                <div class="card-image">
+                <div class="grids-producto">
+                    <div class="slide-content-producto">
+                        <div class="card-producto">
+                            <div class="image-content-producto">
+                                <div class="card-image-producto">
                                     <img id="labial-lancome" src="../img/pag-maqullaje/labial-lancome-2.png"
                                         alt="Gloss LANCOME">
                                 </div>
                             </div>
 
-                            <div class="card-content">
-                                <h2 class="nombre-marca">LANCOME</h2>
-                                <h3 class="nombre-producto">L'ABSOLU GLOSS RÔSY PLUMP</h3>
+                            <div class="card-content-producto">
+                                <h2 class="nombre-marca-producto">LANCOME</h2>
+                                <h3 class="nombre-producto-producto">L'ABSOLU GLOSS RÔSY PLUMP</h3>
                             </div>
                             <hr class="separador">
 
                             <article class="texto-descripcion">
-                                <div class="precio-producto">
-                                    <h2 class="precio">$11.300</h2>
+                                <div class="precio-producto-producto">
+                                    <h2 class="precio-producto">$11.300</h2>
                                     <h3 class="cantidad-cuotas">3 cuotas de $3.766</h3>
                                 </div>
 
@@ -423,6 +424,7 @@
                 </div>
             </article>
         </section>
+        </div>
     </main>
 
     <!--Pagination-->
