--- a/paginas/rostro.html
+++ b/paginas/rostro.html
@@ -8,7 +8,7 @@
     <title>Beauty store</title>
     <link rel="shortcut icon" href="../img/logo-beso.png" type="image/x-icon">
     <!--Link a mi CSS-->
-    <link rel="stylesheet" href="../css/rostro.css">
+    <link rel="stylesheet" href="../css/main.css">
     <!--Link CSS BS-->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha2/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-aFq/bzH65dt+w6FI2ooMVUpc+21e0SRygnTpmBvdBgSdnuTN7QbdgL+OapgHtvPp" crossorigin="anonymous">
@@ -60,7 +60,7 @@
         </section>
 
         <!--Inicia nav-->
-        <nav class="navbar navbar-expand-lg bg-body-tertiary">
+        <nav class="navbar navbar-expand-lg bg-body-tertiary" id="nav-body">
 
             <div class="container-fluid" id="cont-fluid">
                 <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
@@ -126,8 +126,7 @@
     </header>
 
     <main>
-
-
+        <div class="flex-row">
         <!--Side menu vertical-->
         <article class="menu-vertical">
             <nav class="side-bar">
@@ -162,29 +161,29 @@
 
 
         <!--Grid productos-->
-        <section class="contenedor-grid">
-            <article class="grid grid-template-columns-rows">
+        <section class="contenedor-grid-producto">
+            <article class="grid-producto column-row-producto">
 
-                <div class="grids">
-                    <div class="slide-content">
-                        <div class="card">
-                            <div class="image-content">
+                <div class="grids-producto">
+                    <div class="slide-content-producto">
+                        <div class="card-producto">
+                            <div class="image-content-producto">
 
-                                <div class="card-image">
-                                    <img id="base-sabina" src="../img/pag-maqullaje/base-sabina.png"
+                                <div class="card-image-producto">
+                                    <img id="base-guerlain" src="../img/pag-maqullaje/base-sabina.png"
                                         alt="Base liquida Sabina">
                                 </div>
                             </div>
 
-                            <div class="card-content">
-                                <h2 class="nombre-marca">GUERLAIN</h2>
-                                <h3 class="nombre-producto">TERRACOTTA LE TEINT</h3>
+                            <div class="card-content-producto">
+                                <h2 class="nombre-marca-producto">GUERLAIN</h2>
+                                <h3 class="nombre-producto-producto">TERRACOTTA LE TEINT</h3>
                             </div>
                             <hr class="separador">
 
                             <article class="texto-descripcion">
-                                <div class="precio-producto">
-                                    <h2 class="precio">$12.391</h2>
+                                <div class="precio-producto-producto">
+                                    <h2 class="precio-producto">$12.391</h2>
                                     <h3 class="cantidad-cuotas">3 cuotas de $4.130</h3>
                                 </div>
 
@@ -194,24 +193,24 @@
                     </div>
                 </div>
 
-                <div class="grids">
-                    <div class="slide-content">
-                        <div class="card">
-                            <div class="image-content">
+                <div class="grids-producto">
+                    <div class="slide-content-producto">
+                        <div class="card-producto">
+                            <div class="image-content-producto">
 
-                                <div class="card-image">
+                                <div class="card-image-producto">
                                     <img id="mist-rare" src="../img/pag-maqullaje/mist-rare.png" alt="Mist Rare Beauty">
                                 </div>
 
-                                <div class="card-content">
-                                    <h2 class="nombre-marca">RARE BEAUTY</h2>
-                                    <h3 class="nombre-producto">ALWAYS AN OPTIMIST 4-IN-1 MIST</h3>
+                                <div class="card-content-producto">
+                                    <h2 class="nombre-marca-producto">RARE BEAUTY</h2>
+                                    <h3 class="nombre-producto-producto">ALWAYS AN OPTIMIST 4-IN-1 MIST</h3>
                                 </div>
                                 <hr class="separador">
 
                                 <article class="texto-descripcion">
-                                    <div class="precio-producto">
-                                        <h2 class="precio">$6.758</h2>
+                                    <div class="precio-producto-producto">
+                                        <h2 class="precio-producto">$6.758</h2>
                                         <h3 class="cantidad-cuotas">3 cuotas de $2.252</h3>
                                     </div>
 
@@ -222,25 +221,25 @@
                     </div>
                 </div>
 
-                <div class="grids">
-                    <div class="slide-content">
-                        <div class="card">
-                            <div class="image-content">
-                                <div class="card-image">
+                <div class="grids-producto">
+                    <div class="slide-content-producto">
+                        <div class="card-producto">
+                            <div class="image-content-producto">
+                                <div class="card-image-producto">
                                     <img id="rubor-benefit" src="../img/pag-maqullaje/rubor-benefit.png"
                                         alt="Rubor Benefit">
                                 </div>
                             </div>
 
-                            <div class="card-content">
-                                <h2 class="nombre-marca">BENEFIT</h2>
-                                <h3 class="nombre-producto">SHELLIE WANDERFUL WORLD BLUSH COLORETE</h3>
+                            <div class="card-content-producto">
+                                <h2 class="nombre-marca-producto">BENEFIT</h2>
+                                <h3 class="nombre-producto-producto">SHELLIE WANDERFUL WORLD BLUSH COLORETE</h3>
                             </div>
                             <hr class="separador">
 
                             <article class="texto-descripcion">
-                                <div class="precio-producto">
-                                    <h2 class="precio">$8.336</h2>
+                                <div class="precio-producto-producto">
+                                    <h2 class="precio-producto">$8.336</h2>
                                     <h3 class="cantidad-cuotas">3 cuotas de $2.778</h3>
                                 </div>
 
@@ -252,25 +251,25 @@
                 </div>
 
                 <!--segunda fila-->
-                <div class="grids">
-                    <div class="slide-content">
-                        <div class="card">
-                            <div class="image-content">
-                                <div class="card-image">
+                <div class="grids-producto">
+                    <div class="slide-content-producto">
+                        <div class="card-producto">
+                            <div class="image-content-producto">
+                                <div class="card-image-producto">
                                     <img id="corrector-tarte" src="../img/pag-maqullaje/corrector-tare.png"
                                         alt="Corrector iluminador TARTE">
                                 </div>
                             </div>
 
-                            <div class="card-content">
-                                <h2 class="nombre-marca">TARTE</h2>
-                                <h3 class="nombre-producto">CORRECTOR SHAPE TAPE</h3>
+                            <div class="card-content-producto">
+                                <h2 class="nombre-marca-producto">TARTE</h2>
+                                <h3 class="nombre-producto-producto">CORRECTOR SHAPE TAPE</h3>
                             </div>
                             <hr class="separador">
 
                             <article class="texto-descripcion">
-                                <div class="precio-producto">
-                                    <h2 class="precio">$6.984</h2>
+                                <div class="precio-producto-producto">
+                                    <h2 class="precio-producto">$6.984</h2>
                                     <h3 class="cantidad-cuotas">3 cuotas de $2.328</h3>
                                 </div>
 
@@ -280,25 +279,25 @@
                     </div>
                 </div>
 
-                <div class="grids">
-                    <div class="slide-content">
-                        <div class="card">
-                            <div class="image-content">
-                                <div class="card-image">
+                <div class="grids-producto">
+                    <div class="slide-content-producto">
+                        <div class="card-producto">
+                            <div class="image-content-producto">
+                                <div class="card-image-producto">
                                     <img id="stick-fenty" src="../img/pag-maqullaje/stick-fenty.png"
                                         alt="Barra de maquillaje Fenty Beauty">
                                 </div>
                             </div>
 
-                            <div class="card-content">
-                                <h2 class="nombre-marca">FENTY BEAUTY</h2>
-                                <h3 class="nombre-producto">MATCH STIX MATTE & SHIMMER SKINSTICK</h3>
+                            <div class="card-content-producto">
+                                <h2 class="nombre-marca-producto">FENTY BEAUTY</h2>
+                                <h3 class="nombre-producto-producto">MATCH STIX MATTE & SHIMMER SKINSTICK</h3>
                             </div>
                             <hr class="separador">
 
                             <article class="texto-descripcion">
-                                <div class="precio-producto">
-                                    <h2 class="precio">$6.758</h2>
+                                <div class="precio-producto-producto">
+                                    <h2 class="precio-producto">$6.758</h2>
                                     <h3 class="cantidad-cuotas">3 cuotas de $2.252</h3>
                                 </div>
 
@@ -309,25 +308,25 @@
                     </div>
                 </div>
 
-                <div class="grids">
-                    <div class="slide-content">
-                        <div class="card">
-                            <div class="image-content">
-                                <div class="card-image">
+                <div class="grids-producto">
+                    <div class="slide-content-producto">
+                        <div class="card-producto">
+                            <div class="image-content-producto">
+                                <div class="card-image-producto">
                                     <img id="polvo-huda" src="../img/pag-maqullaje/polvo-huda.png"
                                         alt="Polvos sueltos Huda Beauty">
                                 </div>
                             </div>
 
-                            <div class="card-content">
-                                <h2 class="nombre-marca">HUDA BEAUTY</h2>
-                                <h3 class="nombre-producto">EASY BAKE LOOSE POWDER</h3>
+                            <div class="card-content-producto">
+                                <h2 class="nombre-marca-producto">HUDA BEAUTY</h2>
+                                <h3 class="nombre-producto-producto">EASY BAKE LOOSE POWDER</h3>
                             </div>
                             <hr class="separador">
 
                             <article class="texto-descripcion">
-                                <div class="precio-producto">
-                                    <h2 class="precio">$8.561</h2>
+                                <div class="precio-producto-producto">
+                                    <h2 class="precio-producto">$8.561</h2>
                                     <h3 class="cantidad-cuotas">3 cuotas de $2.853</h3>
                                 </div>
 
@@ -340,26 +339,26 @@
 
 
                 <!--Tercera fila-->
-                <div class="grids">
-                    <div class="slide-content">
-                        <div class="card">
-                            <div class="image-content">
-                                <div class="card-image">
+                <div class="grids-producto">
+                    <div class="slide-content-producto">
+                        <div class="card-producto">
+                            <div class="image-content-producto">
+                                <div class="card-image-producto">
                                     <img id="iluminador-rare" src="../img/pag-maqullaje/iluminador-rare.png"
                                         alt="Iluminador en polvo Rare Beauty">
                                 </div>
                             </div>
 
-                            <div class="card-content">
+                            <div class="card-content-producto">
 
-                                <h2 class="nombre-marca">RARE BEAUTY</h2>
-                                <h3 class="nombre-producto">POSITIVE LIGHT SILKY TOUCH HIGHLIGHTER</h3>
+                                <h2 class="nombre-marca-producto">RARE BEAUTY</h2>
+                                <h3 class="nombre-producto-producto">POSITIVE LIGHT SILKY TOUCH HIGHLIGHTER</h3>
                             </div>
                             <hr class="separador">
 
                             <article class="texto-descripcion">
-                                <div class="precio-producto">
-                                    <h2 class="precio">$6.758</h2>
+                                <div class="precio-producto-producto">
+                                    <h2 class="precio-producto">$6.758</h2>
                                     <h3 class="cantidad-cuotas">3 cuotas de $2.252</h3>
                                 </div>
 
@@ -369,25 +368,25 @@
                     </div>
                 </div>
 
-                <div class="grids">
-                    <div class="slide-content">
-                        <div class="card">
-                            <div class="image-content">
-                                <div class="card-image">
+                <div class="grids-producto">
+                    <div class="slide-content-producto">
+                        <div class="card-producto">
+                            <div class="image-content-producto">
+                                <div class="card-image-producto">
                                     <img id="spray-too-faced" src="../img/pag-maqullaje/spray-too-faced.png"
                                         alt="Spray fijador de maquillaje Too Faced">
                                 </div>
                             </div>
 
-                            <div class="card-content">
-                                <h2 class="nombre-marca">TOO FACED</h2>
-                                <h3 class="nombre-producto">DELUXE HANGOVER SPRAY</h3>
+                            <div class="card-content-producto">
+                                <h2 class="nombre-marca-producto">TOO FACED</h2>
+                                <h3 class="nombre-producto-producto">DELUXE HANGOVER SPRAY</h3>
                             </div>
                             <hr class="separador">
 
                             <article class="texto-descripcion">
-                                <div class="precio-producto">
-                                    <h2 class="precio">$4.731</h2>
+                                <div class="precio-producto-producto">
+                                    <h2 class="precio-producto">$4.731</h2>
                                     <h3 class="cantidad-cuotas">3 cuotas de $1.577</h3>
                                 </div>
 
@@ -397,25 +396,25 @@
                     </div>
                 </div>
 
-                <div class="grids">
-                    <div class="slide-content">
-                        <div class="card">
-                            <div class="image-content">
-                                <div class="card-image">
+                <div class="grids-producto">
+                    <div class="slide-content-producto">
+                        <div class="card-producto">
+                            <div class="image-content-producto">
+                                <div class="card-image-producto">
                                     <img id="rubor-too-faced" src="../img/pag-maqullaje/rubor-too-faced.png"
                                         alt="Rubor en polvo Too Faced">
                                 </div>
                             </div>
 
-                            <div class="card-content">
-                                <h2 class="nombre-marca">TOO FACED</h2>
-                                <h3 class="nombre-producto">CLOUD CRUSH</h3>
+                            <div class="card-content-producto">
+                                <h2 class="nombre-marca-producto">TOO FACED</h2>
+                                <h3 class="nombre-producto-producto">CLOUD CRUSH</h3>
                             </div>
                             <hr class="separador">
 
                             <article class="texto-descripcion">
-                                <div class="precio-producto">
-                                    <h2 class="precio">$7.209</h2>
+                                <div class="precio-producto-producto">
+                                    <h2 class="precio-producto">$7.209</h2>
                                     <h3 class="cantidad-cuotas">6 cuotas de $2.403</h3>
                                 </div>
 
@@ -426,6 +425,7 @@
                 </div>
             </article>
         </section>
+    </div>
     </main>
 
     <!--Pagination-->
